--- a/FJSTweetViewController.xib
+++ b/FJSTweetViewController.xib
@@ -251,7 +251,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>FJSTweetViewController</string>
 					<string>UIResponder</string>
-					<string>{{496, 542}, {320, 480}}</string>
+					<string>{{695, 613}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -282,6 +282,13 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">FJSTweetViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">FJSTweetViewController+HRC.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FJSTweetViewController</string>
 					<string key="superclassName">UIViewController</string>
